[gd_scene load_steps=9 format=3 uid="uid://ddedo2oeuftiv"]

[ext_resource type="Script" uid="uid://cjgqmf715ubu7" path="res://player/cameraenemy.gd" id="1_wi8dh"]
[ext_resource type="Texture2D" uid="uid://k5cmujoq1kpm" path="res://enemies/camera/sprite/light.png" id="2_6iqcr"]
[ext_resource type="Texture2D" uid="uid://cnrpl5elw8qg5" path="res://player/sprite/shadow.png" id="4_2wa53"]
[ext_resource type="Texture2D" uid="uid://oyjr85ftefp1" path="res://enemies/camera/sprite/top.png" id="4_3ob6m"]
[ext_resource type="Texture2D" uid="uid://cdl3pub5mlu7c" path="res://enemies/camera/sprite/back.png" id="4_egkxf"]
[ext_resource type="Texture2D" uid="uid://dk1bysesr16i6" path="res://enemies/camera/sprite/front.png" id="5_sdt6t"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_w7mfc"]
blend_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdt6t"]
size = Vector2(6.75, 3)

[node name="CameraEnemy" type="Node2D" groups=["Enemy"]]
z_index = 3
texture_filter = 1
script = ExtResource("1_wi8dh")

[node name="Bottom" type="Sprite2D" parent="."]
position = Vector2(0, 8)
texture = ExtResource("4_3ob6m")

[node name="BackMarker" type="Marker2D" parent="."]
position = Vector2(0, 8)
rotation = 1.5708

[node name="Back" type="Sprite2D" parent="BackMarker"]
position = Vector2(10, -2.28882e-05)
scale = Vector2(0.5, 1)
texture = ExtResource("4_egkxf")

[node name="FrontMarker" type="Marker2D" parent="."]
rotation = -1.57079

[node name="Front" type="Sprite2D" parent="FrontMarker"]
position = Vector2(10, -2.28882e-05)
scale = Vector2(0.5, 1)
texture = ExtResource("5_sdt6t")

[node name="Sensor" type="Marker2D" parent="."]
rotation = -2.35399
scale = Vector2(1.66667, 1.66667)

[node name="Marker2D" type="Marker2D" parent="Sensor"]
position = Vector2(7.64421, 3.37725)
scale = Vector2(0.15, 0.15)

[node name="Light" type="Sprite2D" parent="Sensor"]
material = SubResource("CanvasItemMaterial_w7mfc")
position = Vector2(7.6442, 3.37723)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_6iqcr")
offset = Vector2(256, 256)

[node name="SensorArea" type="Area2D" parent="Sensor"]
position = Vector2(7.64419, 3.37726)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sensor/SensorArea"]
polygon = PackedVector2Array(1.27559, 1.26998, 45.0223, 22.811, 42.9113, 27.4826, 37.4118, 34.7072, 34.8718, 37.2584, 27.6715, 42.7897, 23.0093, 44.9213)

[node name="Top" type="Sprite2D" parent="."]
texture = ExtResource("4_3ob6m")

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -3
texture_filter = 1
position = Vector2(0, 48)
texture = ExtResource("4_2wa53")

[node name="ShadowArea" type="Area2D" parent="."]
position = Vector2(0, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShadowArea"]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_sdt6t")

[connection signal="area_entered" from="Sensor/SensorArea" to="." method="_on_sensor_area_area_entered"]
[connection signal="area_exited" from="Sensor/SensorArea" to="." method="_on_sensor_area_area_exited"]
[connection signal="body_entered" from="ShadowArea" to="." method="_on_shadow_area_body_entered"]
